@@ -24,13 +24,13 @@ repositories {
 dependencies {
     compile 'org.apache.commons:commons-collections4:4.4'
     compile 'org.apache.commons:commons-dbcp2:2.9.0'
-    compile 'commons-net:commons-net:3.7.2'
+    compile 'commons-net:commons-net:3.8.0'
     compile 'org.apache.httpcomponents:httpclient:4.5.13'
-    compile 'org.apache.logging.log4j:log4j-api:2.17.2'
-    compile 'org.apache.logging.log4j:log4j-core:2.17.2'
-    compile 'com.oracle.database.jdbc:ojdbc8:19.8.0.0'
-    compile 'org.springframework:spring-beans:5.3.6'
-    compile 'org.springframework:spring-jdbc:5.3.6'
+    compile 'org.apache.logging.log4j:log4j-api:2.18.0'
+    compile 'org.apache.logging.log4j:log4j-core:2.18.0'
+    compile 'com.oracle.database.jdbc:ojdbc8:19.9.0.0'
+    compile 'org.springframework:spring-beans:5.3.7'
+    compile 'org.springframework:spring-jdbc:5.3.7'
 
     compile fileTree(dir: 'lib', include: '*.jar')
 }
